# dualsense_link

./: .gitattributes  AGENTS.md  CMakeLists.txt  LICENSE.md  README.md  gitignore.txt  run_ui.ps1
core/: crc32.cpp  crc32.h  dualsense_parser.cpp  dualsense_parser.h  dualsense_reports.h  packet_translation.cpp  packet_translation.h
docs/: architecture.md  quickstart_ru.md
driver/: CMakeLists.txt  driver.cpp  driver.h  dualsense_link_vhf.inf  hid_descriptor.h  vhf_device.cpp  vhf_device.h
ipc/: commands.h  pipe_server.cpp  pipe_server.h
scripts/: build_backend.ps1  build_ui.ps1  common.ps1  install_driver.ps1  preflight.ps1  run_app.ps1  uninstall_driver.ps1
service/: bluetooth_manager.cpp  bluetooth_manager.h  console_runtime.cpp  console_runtime.h  console_virtual_hid_client.cpp  console_virtual_hid_client.h  controller_proxy.cpp  controller_proxy.h  driver_bridge_client.cpp  driver_bridge_client.h  hidhide_helpers.cpp  hidhide_helpers.h  hidhide_manager.cpp  hidhide_manager.h  main.cpp  state_format.cpp  state_format.h
shared/: common_types.h  driver_protocol.h
ui/: App.xaml  App.xaml.cpp  App.xaml.h  CMakeLists.txt  ControllerDashboard.xaml  ControllerDashboard.xaml.cpp  ControllerDashboard.xaml.h  MainWindow.xaml  MainWindow.xaml.cpp  MainWindow.xaml.h  PipeClient.cpp  PipeClient.h  service_process.cpp  service_process.h  ui_formatting.cpp  ui_formatting.h  win32_main.cpp
ui/winui3/: DualSenseLinkUI.vcxproj  DualSenseLinkUI.vcxproj.filters  main.cpp
